# shortcut-rs

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md
.github/workflows/: build.yml
src/: index.html  main.js  settings.css  settings.html  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  main.rs
